Tidy up code